Se continua con la  página de proyectos

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -29,84 +29,141 @@
     </nav>
 
     <main>
-        <!-- <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
-        <p>El siguiente enlace lo redirigirá a mi repositorio de proyectos en GitHub:</p>
-        <a style="margin-left: 20px;" target="_blank" class="enlace" href="https://github.com/narto12345">Repositorio de
-            proyectos</a> -->
+        <div style="margin-bottom: 3rem;">
+            <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
+            <p>El siguiente enlace lo redirigirá a mi repositorio de proyectos en GitHub:</p>
+            <a style="margin-left: 20px;" target="_blank" class="enlace"
+                href="https://github.com/narto12345">Repositorio de proyectos</a>
+        </div>
+
         <div class="projects-p">
-            <div class="project-p">
-                <div class="name-project-p">
-                    Sistema Administrador de Proyectos - Razor Pages
-                </div>
-                <div class="technologies">
-                    <div class="technology">
-                        <img src="/img/asp-dotnet-core.png" alt="asp-dotnet-core">
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        Sistema Administrador de Proyectos - Razor Pages
                     </div>
-                    <div class="technology">
-                        <img src="/img/entity-fw.png" alt="entity-fw">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/mysql.png" alt="mysql">
-                    </div>
-                </div>
-            </div>
-            <div class="project-p">
-                <div class="name-project-p">
-                    API RESTful - JAX-RS
-                </div>
-                <div class="technologies">
-                    <div class="technology">
-                        <img src="/img/javaee-square.png" alt="java-ee">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/JavaScript.png" alt="JavaScript">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/mysql.png" alt="mysql">
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/asp-dotnet-core.png" alt="asp-dotnet-core">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/entity-fw.png" alt="entity-fw">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/mysql.png" alt="mysql">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="project-p">
-                <div class="name-project-p">
-                    Mi Directorio - Java Swing
-                </div>
-                <div class="technologies">
-                    <div class="technology">
-                        <img src="/img/javase.png" alt="javase">
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        API RESTful - JAX-RS
                     </div>
-                    <div class="technology">
-                        <img src="/img/java-jdbc.png" alt="JavaScript">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/mysql.png" alt="mysql">
-                    </div>
-                </div>
-            </div>
-            <div class="project-p">
-                <div class="name-project-p">
-                    Sistema de Gestión de Tareas
-                </div>
-                <div class="technologies">
-                    <div class="technology">
-                        <img src="/img/dotnet.svg" alt="dotnet">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/console.png" alt="console">
-                    </div>
-                    <div class="technology">
-                        <img src="/img/archivo-txt.png" alt="archivo-txt">
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/javaee-square.png" alt="java-ee">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/JavaScript.png" alt="JavaScript">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/mysql.png" alt="mysql">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="project-p">
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        Mi Directorio - Java Swing
+                    </div>
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/javase.png" alt="javase">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/java-jdbc.png" alt="JavaScript">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/mysql.png" alt="mysql">
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        Sistema de Gestión de Tareas
+                    </div>
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/dotnet.svg" alt="dotnet">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/console.png" alt="console">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/archivo-txt.png" alt="archivo-txt">
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        CrudInConsole - SQL Server
+                    </div>
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/dotnet.svg" alt="dotnet">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/console.png" alt="console">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/sql-server.svg" alt="sql-server">
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        CRUD Web - Servlet - JSP
+                    </div>
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/javaee-square.png" alt="javaee-square">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/glassfish.png" alt="glassfish">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/sql-server.svg" alt="sql-server">
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="project-p">
+                    <div class="name-project-p">
+                        NartoStore - Java Swing
+                    </div>
+                    <div class="technologies">
+                        <div class="technology">
+                            <img src="/img/javase.png" alt="java-ee">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/java-jdbc.png" alt="java-jdbc">
+                        </div>
+                        <div class="technology">
+                            <img src="/img/sqlite-square.png" alt="sqlite-square">
+                        </div>
+                    </div>
+                </div>
+            </a>
 
-            </div>
-            <div class="project-p">
-
-            </div>
-            <div class="project-p">
-
-            </div>
         </div>
     </main>
 
