Se crea la estructura inicial del detalle de los proyectos

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="projects-p">
-            <a href="#">
+            <a href="/pages/projects/system-projects-task.html">
                 <div class="project-p">
                     <div class="name-project-p">
                         Sistema Administrador de Proyectos - Razor Pages
