Se completa estructura versión 1 para el detalle de los proyectos

--- a/pages/projects/system-projects-task.html
+++ b/pages/projects/system-projects-task.html
@@ -44,20 +44,31 @@
             <h2>¿Qué es?</h2>
         </div>
         <div class="title-project-description">
-            <h2>¿Cómo funciona?</h2>
+            <h2>Funcionamiento</h2>
         </div>
         <div class="project-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, dolor excepturi vel ex incidunt laborum
-            eos eveniet quos doloremque molestias vitae, animi dolores facere veniam, quisquam est! Repudiandae, quia
-            iste.
-            Id et soluta harum laudantium illo dolore porro vero, ab, a quo totam autem voluptas suscipit, atque sint!
-            Provident illo ipsa temporibus quidem ducimus voluptate ipsum, esse dicta autem ex!
+            Este sietema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
+            proyectos y asignarles tareas, especificando nombre, descripción, responsable, estado, prioridad y fecha de
+            vencimiento.
+            Es una aplicación web monolítica elaborada con Razor Pages en ASP.NET Core con C#, las vistas fueron creadas
+            con páginas Razor y para comunicación con la base de datos MySQL se utiliza Entity Framework.
+        </div>
+        <div class="title-project-description">
+            <h2>Código fuente</h2>
+        </div>
+        <div class="project-description">
+            <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL" class="enlace"
+                style="color: #000;" target="_blank">
+                https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL
+            </a>
+
         </div>
         <div class="images-videos">
             <img src="/img/projects_images/spt_1.png" alt="spt_1">
             <img src="/img/projects_images/spt_2.png" alt="spt_2">
             <img src="/img/projects_images/spt_4.png" alt="spt_4">
-            <iframe title="video demostrativo" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe title="video demostrativo"
+                src="https://www.youtube.com/embed/0bqAK9kVvr4?si=KZ2GDUyEHzuMYu-A"></iframe>
         </div>
     </main>
 
