Se completa el contenido con los proyecto actuales

--- a/pages/projects/crud-in-console.html
+++ b/pages/projects/crud-in-console.html
@@ -30,15 +30,16 @@
 
     <main>
         <div class="title-p">
-            <h1>Sistema Administrador de Proyectos</h1>
+            <h1>CrudInConsole</h1>
         </div>
         <div class="project-image">
-            <img src="/img/projects_images/spt_3.png" alt="spt_3">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_2.png?raw=true" alt="img-1">
+            <!-- <iframe title="video demostrativo"
+                src=""></iframe> -->
         </div>
         <div class="project-introduction">
-            Esta aplicación es un sistema administrador de proyectos. Está desarrollador con ASP.NET Core (.NET Versión
-            7), utilizando la tecnología de Razor Pages. Para la persistencia se utiliza una base de datos MySQL, y se
-            encuentra mapeada con Entity Framework.
+            Esta solución es un simple CRUD en consola, está elaborado con c# en .Net 7, y se conecta a una base de
+            datos Microsoft SQL Server.
         </div>
         <div class="title-introduction">
             <h2>¿Qué es?</h2>
@@ -47,28 +48,35 @@
             <h2>Funcionamiento</h2>
         </div>
         <div class="project-description">
-            Este sietema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
-            proyectos y asignarles tareas, especificando nombre, descripción, responsable, estado, prioridad y fecha de
-            vencimiento.
-            Es una aplicación web monolítica elaborada con Razor Pages en ASP.NET Core con C#, las vistas fueron creadas
-            con páginas Razor y para comunicación con la base de datos MySQL se utiliza Entity Framework.
+            Para desplegar esta aplicación deberá realizar lo siguiente:
+            <ul>
+                <li>Abra el proyecto en su IDE de preferencia, es recomendable usar Visual Studio Code o Visual Studio.
+                    El proyecto se encuentra en el directorio “CrudInConsole” ubicado en el directorio raíz de este
+                    repositorio.
+                </li>
+                <li>
+                    Importe la base de datos SQL Server en su equipo. El script “PilotTestDB.sql” se encuentra ubicado
+                    en el directorio raíz del repositorio, úselo para realizar dicho proceso.
+                </li>
+                <li>
+                    En el archivo “Conexion.cs” modifique los valores de “ID” y “Password” conforme a las credenciales
+                    de su motor de base de datos SQL Server
+                </li>
+            </ul>
         </div>
         <div class="title-project-description">
             <h2>Código fuente</h2>
         </div>
         <div class="project-description">
-            <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL" class="enlace"
-                style="color: #000;" target="_blank">
-                https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL
+            <a href="https://github.com/narto12345/CrudInConsole?tab=readme-ov-file" class="enlace" style="color: #000;"
+                target="_blank">
+                https://github.com/narto12345/CrudInConsole?tab=readme-ov-file
             </a>
-
         </div>
         <div class="images-videos">
-            <img src="/img/projects_images/spt_1.png" alt="spt_1">
-            <img src="/img/projects_images/spt_2.png" alt="spt_2">
-            <img src="/img/projects_images/spt_4.png" alt="spt_4">
-            <iframe title="video demostrativo"
-                src="https://www.youtube.com/embed/0bqAK9kVvr4?si=KZ2GDUyEHzuMYu-A"></iframe>
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_1.png?raw=true" alt="img-2">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_3.png?raw=true" alt="img-3">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_4.png?raw=true" alt="img-4">
         </div>
     </main>
 
