--- a/pages/projects/api_restful.html
+++ b/pages/projects/api_restful.html
@@ -30,15 +30,15 @@
 
     <main>
         <div class="title-p">
-            <h1>Sistema Administrador de Proyectos</h1>
+            <h1>CRUD Web con JavaScript, JAVA EE y MySQL</h1>
         </div>
         <div class="project-image">
-            <img src="/img/projects_images/spt_3.png" alt="spt_3">
+            <iframe title="video demostrativo"
+                src="https://www.youtube.com/embed/m4bkmcuGC94?si=GTKZUf2wWUJOHuPz"></iframe>
         </div>
         <div class="project-introduction">
-            Esta aplicación es un sistema administrador de proyectos. Está desarrollador con ASP.NET Core (.NET Versión
-            7), utilizando la tecnología de Razor Pages. Para la persistencia se utiliza una base de datos MySQL, y se
-            encuentra mapeada con Entity Framework.
+            Aplicación CRUD Web API RESTful que se conecta a una base de datos MySQL, implementada con Java EE,
+            JavaScript y alojada en un servidor Glassfish.
         </div>
         <div class="title-introduction">
             <h2>¿Qué es?</h2>
@@ -47,28 +47,42 @@
             <h2>Funcionamiento</h2>
         </div>
         <div class="project-description">
-            Este sietema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
-            proyectos y asignarles tareas, especificando nombre, descripción, responsable, estado, prioridad y fecha de
-            vencimiento.
-            Es una aplicación web monolítica elaborada con Razor Pages en ASP.NET Core con C#, las vistas fueron creadas
-            con páginas Razor y para comunicación con la base de datos MySQL se utiliza Entity Framework.
+            Esta aplicación CRUD sigue una arquitectura en n capas, y está conformada de la siguiente manera:
+
+            <ul>
+                <li>
+                    Capa del cliente:Elaborado con JavaScript nativo y consume el API RESTful por medio del método
+                    “fetch”. El Backend está
+                    desarrollado con Java EE 8 alojado en un servidor de aplicaciones Glassflish 5.0
+                </li>
+                <li>
+                    Capa de servicio: En esta capa se crea un servicio RESTful, implementando JAX-RS con jersey client
+                    de Glassfish.
+                </li>
+                <li>
+                    Capa de datos: Elaborada con la implementación EclipseLink de la API de JPA. La unidad de
+                    persistencia la suministra el servidor de Glassflish, por medio de un pool de conexiones.
+                </li>
+                <li>
+                    Base de datos: El motor MySQL, y contiene una base de datos llamada “test”, la cual aloja una tabla
+                    llamada “persona”.
+                </li>
+            </ul>
         </div>
         <div class="title-project-description">
             <h2>Código fuente</h2>
         </div>
         <div class="project-description">
-            <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL" class="enlace"
+            <a href="https://github.com/narto12345/JavaScript-API-RESTful-Java-EE-MySQL" class="enlace"
                 style="color: #000;" target="_blank">
-                https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL
+                https://github.com/narto12345/JavaScript-API-RESTful-Java-EE-MySQL
             </a>
 
         </div>
         <div class="images-videos">
-            <img src="/img/projects_images/spt_1.png" alt="spt_1">
-            <img src="/img/projects_images/spt_2.png" alt="spt_2">
-            <img src="/img/projects_images/spt_4.png" alt="spt_4">
-            <iframe title="video demostrativo"
-                src="https://www.youtube.com/embed/0bqAK9kVvr4?si=KZ2GDUyEHzuMYu-A"></iframe>
+            <img src="/img/projects_images/api_restful_1.png" alt="api_restful_1">
+            <img src="/img/projects_images/api_restful_2.png" alt="api_restful_2">
+            <img src="/img/projects_images/api_restful_3.png" alt="api_restful_3">
         </div>
     </main>
 
