--- a/pages/projects/sistema-gt.html
+++ b/pages/projects/sistema-gt.html
@@ -30,15 +30,21 @@
 
     <main>
         <div class="title-p">
-            <h1>Sistema Administrador de Proyectos</h1>
+            <h1>Sistema de Gestión de Tareas</h1>
         </div>
         <div class="project-image">
-            <img src="/img/projects_images/spt_3.png" alt="spt_3">
+            <img src="https://github.com/narto12345/SistemaGT/blob/main/image_1.png?raw=true" alt="img-1">
+            <!-- <iframe title="video demostrativo"
+                src=""></iframe> -->
         </div>
         <div class="project-introduction">
-            Esta aplicación es un sistema administrador de proyectos. Está desarrollador con ASP.NET Core (.NET Versión
-            7), utilizando la tecnología de Razor Pages. Para la persistencia se utiliza una base de datos MySQL, y se
-            encuentra mapeada con Entity Framework.
+            Este proyecto cumple la función de un Sistema de Gestión de Tareas (SistemaGT); está elaborado en C# sobre
+            .Net en su versión 7.0.306, a continuación, algunas de sus características:
+            <ul>
+                <li>Aplicación de consola.</li>
+                <li>Patrón de diseño MVC.</li>
+                <li>Persistencia mediante el uso de un archivo de texto (.txt).</li>
+            </ul>
         </div>
         <div class="title-introduction">
             <h2>¿Qué es?</h2>
@@ -47,29 +53,26 @@
             <h2>Funcionamiento</h2>
         </div>
         <div class="project-description">
-            Este sietema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
-            proyectos y asignarles tareas, especificando nombre, descripción, responsable, estado, prioridad y fecha de
-            vencimiento.
-            Es una aplicación web monolítica elaborada con Razor Pages en ASP.NET Core con C#, las vistas fueron creadas
-            con páginas Razor y para comunicación con la base de datos MySQL se utiliza Entity Framework.
+            La aplicación tiene las siguientes capacidades:
+            <ul>
+                <li>Agregar Tareas</li>
+                <li>Eliminar Tareas</li>
+                <li>Marcar Tareas</li>
+                <li>Listar Tareas</li>
+            </ul>
         </div>
         <div class="title-project-description">
             <h2>Código fuente</h2>
         </div>
         <div class="project-description">
-            <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL" class="enlace"
-                style="color: #000;" target="_blank">
-                https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL
+            <a href="https://github.com/narto12345/SistemaGT" class="enlace" style="color: #000;" target="_blank">
+                https://github.com/narto12345/SistemaGT
             </a>
-
         </div>
-        <div class="images-videos">
-            <img src="/img/projects_images/spt_1.png" alt="spt_1">
-            <img src="/img/projects_images/spt_2.png" alt="spt_2">
-            <img src="/img/projects_images/spt_4.png" alt="spt_4">
-            <iframe title="video demostrativo"
-                src="https://www.youtube.com/embed/0bqAK9kVvr4?si=KZ2GDUyEHzuMYu-A"></iframe>
-        </div>
+        <!-- <div class="images-videos">
+            <img src="/img/projects_images/" alt="">
+            <img src="/img/projects_images/" alt="">
+        </div> -->
     </main>
 
     <footer>
