Se actualiza informacion de experiencia en Bext

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -35,7 +35,7 @@
                     <div class="information">
                         <div class="role">Analista funcional y Desarrollador Junior</div>
                         <div class="entity-name">(BEXTechnology S.A.S)</div>
-                        <div class="working-time">2021 Agosto - Actualidad</div>
+                        <div class="working-time">2021 Agosto - 2024 Junio <b>(2 años y 10 meses)</b></div>
                     </div>
                 </div>
                 <div class="body">
@@ -53,14 +53,15 @@
                         <li>
                             <b>Desarrollador Junior:</b> Soporte en administración de bases de datos SQL Server y MySQL,
                             elaboración de manuales técnicos en infraestructuras de Azure y AWS, consultoría de Power
-                            Platform.
+                            Platform y desarrollo de aplicaciones en (.Net).
                         </li>
                     </ul>
                     <p>Algunos de los proyectos en los que he participado son:</p>
                     <div class="projects">
                         <div class="project">
                             <div class="head">
-                                <div class="name">Herramienta de Relatorías Fase 2</div>
+                                <div class="name">Herramienta de Relatorías Fase 2 - Analista Funcional <b>(5 meses)</b>
+                                </div>
                                 <div class="client">Superintendencia de Industria y Comercio</div>
                             </div>
                             <div class="p-body">
@@ -74,7 +75,8 @@
                                         delegatura, visualizadas en un entorno privado y público.
                                     </li>
                                     <li>
-                                        <b>Actividades:</b> Elaborar manuales de usuario y ejecutar pruebas funcionales
+                                        <b>Responsabilidades:</b> Elaborar manuales de usuario y ejecutar pruebas
+                                        funcionales
                                         en
                                         Azure Test Plans.
                                     </li>
@@ -83,7 +85,8 @@
                         </div>
                         <div class="project">
                             <div class="head">
-                                <div class="name">Buscador de Actos Administrativos</div>
+                                <div class="name">Buscador de Actos Administrativos - Analista Funcional <b>(5
+                                        meses)</b></div>
                                 <div class="client">Superintendencia de Industria y Comercio</div>
                             </div>
                             <div class="p-body">
@@ -95,7 +98,8 @@
                                         privado y público.
                                     </li>
                                     <li>
-                                        <b>Actividades:</b> Elaborar manuales de usuario y ejecutar pruebas funcionales
+                                        <b>Responsabilidades:</b> Elaborar manuales de usuario y ejecutar pruebas
+                                        funcionales
                                         en
                                         Azure Test Plans.
                                     </li>
@@ -104,7 +108,7 @@
                         </div>
                         <div class="project">
                             <div class="head">
-                                <div class="name">Plataforma ANSV</div>
+                                <div class="name">Plataforma ANSV - Documentador Técnico <b>(6 meses)</b></div>
                                 <div class="client">Agencia Nacional de Seguridad Vial</div>
                             </div>
                             <div class="p-body">
@@ -118,7 +122,8 @@
                                         nube (iaas, paas, saas - low code).
                                     </li>
                                     <li>
-                                        <b>Actividades:</b> Elaborar manuales técnicos, diagramas de arquitectura e
+                                        <b>Responsabilidades:</b> Elaborar manuales técnicos, diagramas de arquitectura
+                                        e
                                         infraestructura.
                                     </li>
                                 </ul>
@@ -126,21 +131,59 @@
                         </div>
                         <div class="project">
                             <div class="head">
-                                <div class="name">BestDoc</div>
+                                <div class="name">BestDoc - Analista Funcional <b>(12 meses)</b></div>
                                 <div class="client">Producto propio de BexTechnology</div>
                             </div>
                             <div class="p-body">
                                 <ul>
                                     <li>
-                                        <b>Objetivo:</b> Software SaaS de gestión electrónica para la creación,
+                                        <b>Objetivo:</b> Asegurar la calidad del Sistema de gestión de documentos
+                                        electrónicos de archivo (SGDEA) para la creación,
                                         clasificación y
                                         almacenamiento digital de documentos y expedientes empresariales.
                                     </li>
                                     <li>
-                                        <b>Actividades:</b> Desarrollar e Implementar mejoras para una aplicación
-                                        encargada de realizar migraciones masivas de expedientes y documentos hacia un
-                                        gestor documental, ejecutar pruebas y capacitaciones funcionales sobre el gestor
-                                        documental.
+                                        <b>Responsabilidades:</b> Analizar, diseñar, evaluar e implementar planes de
+                                        pruebas
+                                        funcionales para los diversos módulos del sistema documental (Expedientes,
+                                        Ventanilla y Transferencias Electronicas).
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">BestDoc - Migrador - Desarrollador Junior <b>(2 meses)</b></div>
+                                <div class="client">Producto propio de BexTechnology</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        <b>Objetivo:</b> Desarrollar un Migrador capaz de conectarse con los servicios
+                                        de interoperabilidad y realizar cargue masivo de Expedientes y Documentos hacia
+                                        el gestor documental.
+                                    </li>
+                                    <li>
+                                        <b>Responsabilidades:</b> Diseñar y desarrollar un aplicativo sólido y escalable
+                                        que sea facil de mantener y mejorar, utilizando tecnologías como .Net y Windows
+                                        Forms.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">BestDoc - Soporte - Desarrollador Junior <b>(1 mes)</b></div>
+                                <div class="client">Producto propio de BexTechnology</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        <b>Objetivo:</b> Estabilizar la versión de MySQL del gestor documental.
+                                    </li>
+                                    <li>
+                                        <b>Responsabilidades:</b> Resolución de bugs de diferente hincapié, como
+                                        procedimientos almacenados (SPs), Backend (.Net Framework) o Frontend (Angular).
                                     </li>
                                 </ul>
                             </div>
