--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="navigation-main">
                 <a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a>
                 <a href="#">Experiencia <i class="fa-solid fa-briefcase"></i></a>
-                <a href="#">Proyectos <i class="fa-solid fa-print"></i></a>
+                <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
                 <a href="#">Certificaciones <i class="fa-solid fa-medal"></i></a>
                 <a href="#">Sobre mí <i class="fa-solid fa-person"></i></a>
                 <a href="#">Contacto <i class="fa-solid fa-phone"></i></a>
@@ -61,33 +61,35 @@
             <div class="projects-container">
                 <article class="project">
                     <h3>System Project Task</h3>
-                    <img src="/images/projects/entity-fw.png" alt="logo dotnet">
-                    <p>Descripción breve del Proyecto 1.</p>
+                    <img src="/images/projects/dotnet-core.png" alt="logo dotnet">
+                    <p>Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con Razor Pages,
+                        Entity Framework y MySQL.</p>
                     <a href="#" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
                     <h3>Mi Directorio</h3>
                     <img src="/images/projects/javase.png" alt="logo javase">
-                    <p>Descripción breve del Proyecto 2.</p>
+                    <p>Aplicación de escritorio que cumple la función de directorio personal, está realizada en Java 8 y
+                        utiliza una base de datos MySQL.</p>
                     <a href="#" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
                     <h3>Sistema de Gestión de Tareas</h3>
                     <img src="/images/projects/dotnet.svg" alt="logo dotnet">
-                    <p>Descripción breve del Proyecto 3.</p>
+                    <p>Aplicación de consola que permite gestionar tareas cotidianas. Elaborada con C# sobre .NET 7.</p>
                     <a href="#" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
                     <h3>CRUD - JavaServer Pages</h3>
                     <img src="/images/projects/jsp.webp" alt="logo dotnet">
-                    <p>Descripción breve del Proyecto 4.</p>
+                    <p>Aplicación web CRUD realizada con Java EE 8 y las tecnologías de los Servlets y JSPs.</p>
                     <a href="#" class="rellenito color2">Más información</a>
                 </article>
             </div>
-            <a href="#"
+            <a href="/pages/projects.html"
                 class="d-block color2 rellenito hover-fondo_azul bordes-negro resp-mar-top box-peque con-center bordes-rendondos">Ver
                 todos
                 los
