Se avanza en el módulo de proyectos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="/images/projects/dotnet-core.png" alt="logo dotnet">
                     <p>Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con Razor Pages,
                         Entity Framework y MySQL.</p>
-                    <a href="#" class="rellenito color2">Más información</a>
+                    <a href="/pages/project-details/system-project-task.html" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
