--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,12 +46,12 @@
                 <p class="rellenito">Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con
                     Razor Pages, Entity
                     Framework y MySQL.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/system-project-task.html" class="rellenito d-block">Ver detalle</a>
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
                     <h2>Mi Directorio</h2>
-                    <img class="con-center" src="/images/projects/javase.png" alt="logo-dotnet">
+                    <img class="con-center" src="/images/projects/javase.png" alt="logo-javase">
                 </div>
                 <p class="rellenito">Aplicación de escritorio que cumple la función de directorio personal, está
                     realizada en Java 8 y
@@ -60,11 +60,37 @@
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
-                    <h2>CRUD - JavaScript y Java EE</h2>
-                    <img class="con-center" src="/images/projects/JavaScript-logo.png" alt="logo-dotnet">
+                    <h2>CRUD RESTful - JavaScript y Java EE</h2>
+                    <img class="con-center" src="/images/projects/JavaScript-logo.png" alt="logo-js">
                 </div>
                 <p class="rellenito">Aplicación CRUD Web API RESTful que se conecta a una base de datos MySQL,
                     implementada con Java EE, JavaScript y alojada en un servidor Glassfish.</p>
+                <a href="#" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
+                    <h2>PilotTest - CRUD - JavaServer Pages</h2>
+                    <img class="con-center" src="/images/projects/jsp.webp" alt="logo-jsp">
+                </div>
+                <p class="rellenito">Aplicación CRUD Web elaborada con JavaServer Pages y SQL Server.</p>
+                <a href="#" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
+                    <h2>SistemaGT</h2>
+                    <img class="con-center" src="/images/projects/dotnet.svg" alt="logo-dotnet">
+                </div>
+                <p class="rellenito">Aplicación de consola que cumple la función de un Sistema de Gestión de Tareas
+                    (SistemaGT); está elaborado en C# sobre .Net y persiste la información mediante un archivo .txt.</p>
+                <a href="#" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
+                    <h2>CrudInConsole</h2>
+                    <img class="con-center" src="/images/projects/dotnet.svg" alt="logo-dotnet">
+                </div>
+                <p class="rellenito">Aplicación CRUD en consola; está elaborado con C# en .Net 7, y se conecta a una
+                    base de datos Microsoft SQL Server.</p>
                 <a href="#" class="rellenito d-block">Ver detalle</a>
             </article>
         </div>
@@ -79,7 +105,6 @@
 
     <!-- Scripts (JavaScript) -->
     <script src="https://kit.fontawesome.com/a292f49ca8.js" crossorigin="anonymous"></script>
-    <script src="/scripts/projects.js"></script>
 </body>
 
 </html>
