Se completa detalle de system project task

--- a/pages/project-details/system-project-task.html
+++ b/pages/project-details/system-project-task.html
@@ -46,7 +46,7 @@
         </p>
         <h3>Funcionamiento:</h3>
         <p>
-            Este sietema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
+            Este sistema permite la creación de proyectos, usuarios y tareas. Los usuarios pueden ser añadidos a los
             proyectos y asignarles tareas, especificando nombre, descripción, responsable, estado, prioridad y fecha de
             vencimiento.
             Es una aplicación web monolítica elaborada con Razor Pages en ASP.NET Core con C#, las vistas fueron creadas
@@ -64,6 +64,15 @@
             <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL"
                 target="_blank">https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL</a>
         </p>
+        <h3>Ilustraciones:</h3>
+        <div class="ilustraciones">
+            <iframe title="video demostrativo" src="https://www.youtube.com/embed/0bqAK9kVvr4?si=KZ2GDUyEHzuMYu-A">
+            </iframe>
+            <img src="/images/projects/system-project-task/spt_1.png" alt="spt-1">
+            <img src="/images/projects/system-project-task/spt_2.png" alt="spt-2">
+            <img src="/images/projects/system-project-task/spt_3.png" alt="spt-3">
+            <img src="/images/projects/system-project-task/spt_4.png" alt="spt-4">
+        </div>
     </main>
     <footer class="color4">
         <div class="container">
